# zeroML

./: .gitignore  RESULTS_COMPARISON.md  commands.txt  pyproject.toml  requirements.txt
cli/: zeroml_infer.py  zeroml_train.py
models/: autoencoder_improved_results.json  autoencoder_results.json  end_to_end_test_results.json  final_comprehensive_results.json  hyperparameter_tuning_results.json  isolation_forest_improved_results.json  isolation_forest_results.json  oneclass_svm_results.json  three_model_comparison.json  wednesday_vs_friday_comparison.json
nprint_bin/: nprint
outputs/iforest_v1/: metadata.json  threshold.json
scripts/: cleanup_git.sh  compare_all_models.py  compare_attack_days.py  compare_models.py  create_ensemble.py  create_manifest.py  create_splits.py  create_splits_with_attack_choice.py  create_visualizations.py  feature_engineering.py  final_model_comparison.py  generate_stats.py  run_friday_pipeline.py  test_end_to_end.py  train_autoencoder.py  train_autoencoder_improved.py  train_autoencoder_simple.py  train_isolation_forest.py  train_isolation_forest_improved.py  train_oneclass_svm.py  train_oneclass_svm_optimized.py  tune_isolation_forest.py
scripts/analysis/: nprint_config_analysis.md
scripts/processing/: pcap_to_npy.py
scripts/validation/: validate_data.py
src/zeroml/: __init__.py  datasets.py  (+1 more)
src/zeroml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
visualizations/: performance_summary.json  performance_summary.txt
visualizations_friday/: performance_summary.json  performance_summary.txt
(+9 files in other folders)
