[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroml"
version = "0.1.0"
description = "ML-Based Zero-Day Attack Detection Using Enhanced Network Traffic Representation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Vishal Dhanda", email = "your.email@example.com"}
]
license = {text = "MIT"}

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.8.0",  # or "torch>=1.10.0" if you prefer PyTorch
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
zeroml-train = "zeroml.pipelines.train:main"
zeroml-infer = "zeroml.pipelines.infer:main"